--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/video.m4a">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Babess</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Btw it was hard to develop this website, hehe ;)</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    Happy Birthday to my favorite person, no matter the distance! 🎉 Wishing we could celebrate together, but until then, here’s to all the countdowns, calls, and future adventures. Miss you tons! ❤️
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -65,11 +65,14 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <div class="imgages">
+                <img src="./img/boy.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+                <img src="./img/Hand.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+                <img src="./img/4.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            </div>
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May you have an amazing year ahead with annoying me 🤤</h5>
             </div>
         </div>
 
